--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <!-- Sfondo dell'header -->
+        <!-- Header background -->
         <figure>
-            <!-- Logo The Booleaner -->
+            <!-- The Booleaner logo -->
             <svg class="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 322.68 81.88">
                 <g style="isolation:isolate">
@@ -66,6 +66,32 @@
     </header>
 
     <main>
+        <article>
+            <section class="article-header">
+                <!-- Title -->
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim berners-Lee</h1>
+
+                <!-- Author -->
+                <span class="author">Scritto da <a target="_blank" href="index.html">The Booleaner</a></span>
+                <br>
+                <!-- Date -->
+                <span class="date">il 10/10/2020</span>
+            </section>
+
+
+            <img src="./assets/img/tim-1.jpg" alt="Tim Berners-Lee 1">
+            <img src="./assets/img/tim-2.jpg" alt="Tim Berners-Lee 2">
+
+            <br>
+
+            <span class="caption">
+                1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+                <br>
+                2nd Photo: Wikimedia, by Paul Clarke
+            </span>
+
+
+        </article>
 
     </main>
 
