--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!-- Header background -->
-        <figure>
+        <figure class="header-background">
             <!-- The Booleaner logo -->
             <svg class="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 322.68 81.88">
@@ -78,12 +78,14 @@
                 <span class="date">il 10/10/2020</span>
             </section>
 
+            <!-- Images -->
+            <figure>
+                <img src="./assets/img/tim-1.jpg" alt="Tim Berners-Lee 1">
+                <img src="./assets/img/tim-2.jpg" alt="Tim Berners-Lee 2">
+            </figure>
 
-            <img src="./assets/img/tim-1.jpg" alt="Tim Berners-Lee 1">
-            <img src="./assets/img/tim-2.jpg" alt="Tim Berners-Lee 2">
 
-            <br>
-
+            <!-- Captions -->
             <span class="caption">
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
                 <br>
@@ -98,6 +100,22 @@
                 recusandae unde iure. Natus enim facilis ut illum doloribus provident eos adipisci et, ducimus minus
                 iusto obcaecati necessitatibus voluptatem quis!
             </p>
+
+            <!-- Unordered list -->
+            <ul>
+                <li>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis at suscipit dolor.
+                </li>
+                <li>
+                    Veritatis at suscipit dolor. Explicabo illum sit modi, minima vero veniam, suscipit eius a mollitia
+                    voluptate iusto!
+                </li>
+                <li>
+                    Consequatur labore saepe quas temporibus!
+                </li>
+            </ul>
+
+
 
 
         </article>
