added table and the last p

--- a/index.html
+++ b/index.html
@@ -115,8 +115,57 @@
                 </li>
             </ul>
 
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
 
+                <tbody>
+                    <tr class="odd">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda doloribus velit ab
+                            itaque ratione quas odio, consequatur dignissimos iusto quae fuga natus ipsa alias
+                            voluptatibus
+                            tempora nihil at hic!
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda doloribus velit ab
+                            itaque ratione quas odio, consequatur dignissimos iusto quae fuga natus ipsa alias
+                            voluptatibus
+                            tempora nihil at hic!
+                        </td>
+                    </tr>
+                    <tr class="odd">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda doloribus velit ab
+                            itaque ratione quas odio, consequatur dignissimos iusto quae fuga natus ipsa alias
+                            voluptatibus
+                            tempora nihil at hic!
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, quidem ipsum labore aliquid
+                architecto pariatur nobis iusto molestias, culpa porro fugiat distinctio quas id perspiciatis voluptatem
+                nihil placeat alias modi! <mark>Lorem ipsum dolor sit amet consectetur adipisicing elit.</mark> Iste
+                assumenda
+                recusandae unde iure. Natus enim facilis ut illum doloribus provident eos adipisci et, ducimus minus
+                iusto obcaecati necessitatibus voluptatem quis!
+            </p>
 
         </article>
 
