--- a/index.html
+++ b/index.html
@@ -22,19 +22,18 @@
 
     <main>
         <article>
-            <section class="article-header">
-                <!-- Title -->
-                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim berners-Lee</h1>
+            <!-- Title -->
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim berners-Lee</h1>
 
-                <!-- Author -->
-                <span class="author">Scritto da <a target="_blank" href="index.html">The Booleaner</a></span>
-                <br>
-                <!-- Date -->
-                <span class="date">il 10/10/2020</span>
-            </section>
+            <!-- Author -->
+            <span class="author">Scritto da <a target="_blank" href="index.html">The Booleaner</a></span>
+            <br>
+            <!-- Date -->
+            <span class="date">il 10/10/2020</span>
+
 
             <!-- Images -->
-            <figure>
+            <figure class="article-imgs">
                 <img src="./assets/img/tim-1.jpg" alt="Tim Berners-Lee 1">
                 <img src="./assets/img/tim-2.jpg" alt="Tim Berners-Lee 2">
             </figure>
@@ -137,3 +136,6 @@
 </body>
 
 </html>
+
+
+<!-- EXERCISE COMPLETED -->
